--- a/index.html
+++ b/index.html
@@ -3,64 +3,49 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>International Society of Haters Hatin' on YOU!</title>
+  <title>Rusty Old Comedy</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
   <header class="hero">
-    <h1>The International Society of Haters</h1>
-    <p class="tagline">Everyone and Everything is fair game. </p>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#roasts">Roast Archive</a>
-      <a href="#submit">Submit a Roast</a>
-      <a href="#videos">Videos</a>
-    </nav>
+    <h1 class="site-title">Rusty Old Comedy</h1>
+    <p class="tagline">Old School Laughs. Zero Apologies.</p>
   </header>
 
   <main>
-    <section id="about" class="section">
-      <h2>What Is This?</h2>
-      <p>
-        The International Society of Haters is pillar of true FREE SPEECH.   
-      </p>
-      <p>
-         Yeah, we got a problem.
-      </p>
-      <p>
-        Yeah, we're hatin' on you.
-      </p>
-      <p>
-        Look at you.
-      </p>
-      <p>
-        Lighten up. You look like you're used to being made fun of. If not, you should be so we will get you used to it.
-      </p>
+    <!-- Rusty’s Photo -->
+    <section class="rusty-section">
+      <img 
+        src="images/RustyontheMic.jpg" 
+        alt="Comedian performing on stage"
+        class="rusty-photo"
+      />
     </section>
 
-    <section id="featured" class="section">
-      <h2>🔥 Today’s Featured Roast</h2>
-      <div class="featured-box">
-        <p><em>"Your browser history called it wants to know why you're still using Internet Explorer in 2025."</em></p>
-        <p><em>"Your browser history called it wants to know why  ."</em></p>
-        <p><em>"Your browser history called THE POLICE AND FBI. Then a trauma counselor."</em></p>
-      </div>
+    <!-- Links -->
+    <section class="links-section">
+      <h2>Featured Comedy</h2>
+
+      <a class="btn" href="https://InternationalSocietyofHaters.com" target="_blank">
+        Visit the International Society of Haters
+      </a>
+
+      <a class="btn" href="#videos">
+        Watch Public Domain Comedy Clips (Coming Soon)
+      </a>
     </section>
 
     <section id="videos" class="section">
-      <h2>🎥 Roast Videos</h2>
-      <p>Coming soon: links to YouTube channels and shorts.</p>
-
+      <h2>Comedy Videos</h2>
+      <p>Public domain classic comedy, curated for maximum nostalgia. Uploads coming soon.</p>
     </section>
 
-    <section id="submit" class="section">
-      <h2>Submit Your Roast</h2>
-      <p>Drop your funniest roast here. A box will go here later with GitHub integration.</p>
-    </section>
   </main>
 
   <footer>
-    <p>© 2025 International Society of Haters  All rights reserved.</p>
+    <p>© 2025 Rusty Old Comedy. All rights reserved.</p>
   </footer>
 </body>
 </html>
+
