--- a/index.html
+++ b/index.html
@@ -8,37 +8,67 @@
 </head>
 
 <body>
+
   <header class="hero">
-    <h1 class="site-title">Rusty Old Comedy</h1>
-    <p class="tagline">Old School Laughs. Zero Apologies.</p>
+    <h1 class="title-animate">Rusty Old Comedy</h1>
+    <p class="tagline">Old-School Laughs. Zero Apologies.</p>
   </header>
 
   <main>
-    <!-- Rusty’s Photo -->
+
+    <!-- Rusty Photo -->
     <section class="rusty-section">
       <img 
-        src="images/RustyontheMic.jpg" 
-        alt="Comedian performing on stage"
+        src="images/RustyontheMic.jpg"
+        alt="Comedian performing live on stage"
         class="rusty-photo"
       />
     </section>
 
-    <!-- Links -->
+
+    <!-- Links Section -->
     <section class="links-section">
-      <h2>Featured Comedy</h2>
+      <h2 class="section-title">Featured Comedy</h2>
 
       <a class="btn" href="https://InternationalSocietyofHaters.com" target="_blank">
         Visit the International Society of Haters
       </a>
 
+      <a class="btn" href="https://chickenraces.com" target="_blank">
+        Visit ChickenRaces.com
+      </a>
+
       <a class="btn" href="#videos">
-        Watch Public Domain Comedy Clips (Coming Soon)
+        Watch Public Domain Comedy Clips
       </a>
     </section>
 
-    <section id="videos" class="section">
-      <h2>Comedy Videos</h2>
-      <p>Public domain classic comedy, curated for maximum nostalgia. Uploads coming soon.</p>
+
+    <!-- YouTube videos -->
+    <section id="videos" class="video-section">
+      <h2 class="section-title">Classic Comedy Clips</h2>
+      <p>Public-domain comedy gems curated by Rusty. More coming soon.</p>
+
+      <!-- Example YouTube Embed -->
+      <div class="video-wrapper">
+        <iframe
+          src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+          title="Comedy Clip"
+          frameborder="0"
+          allowfullscreen>
+        </iframe>
+      </div>
+    </section>
+
+
+    <!-- Book Rusty -->
+    <section id="booking" class="booking-section">
+      <h2 class="section-title">Book Rusty</h2>
+      <p>Need a comedian with grit, timing, and a beard that has seen things?</p>
+
+      <a class="btn booking-btn" href="mailto:rustyrayfield70@gmail.com">
+        Email to Book Rusty
+      </a>
     </section>
 
   </main>
@@ -46,6 +76,8 @@
   <footer>
     <p>© 2025 Rusty Old Comedy. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
+
 
